added google search console verification

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta property="og:site_name" content="technical-seo" />
     <meta property="og:url" content=https://technical-seo.vercel.app/>
     <meta
+      name="google-site-verification"
+      content="rKcBAQQ_L6sgnXkjzc-dKa3W5lBVWsCzI2tv9Uynw_A"
+    />
+    <meta
       property="og:description"
       content="This"
       is
